--- a/sample.yml
+++ b/sample.yml
@@ -4,6 +4,6 @@
   tasks:
   - name: install web server on ubuntu
     apt:
-     name:apache2
-    state: presentssss
+     name: apache2
+     state: present
     when: ansible_os_family=="Debian"
