--- a/sample.yml
+++ b/sample.yml
@@ -2,8 +2,8 @@
 - hosts: all
   become: yes
   tasks:
-  - name: install web server on ubuntu
+  - name: install apache2
     apt:
-     name: apache2
-     state: present
+      name: apache2
+      state: present
     when: ansible_os_family=="Debian"
