--- a/sample.yml
+++ b/sample.yml
@@ -7,3 +7,8 @@
       name: apache2
       state: present
     when: ansible_os_family=="Debian"
+  - name: install tree
+    apt:
+     name: tree
+     state: present
+    when: ansible_os_family=="Debian"  
